@@ -1,17 +1,15 @@
 package uk.nhs.adaptors.mockmhsservice.common;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
-
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 
-import io.micrometer.core.instrument.util.IOUtils;
 import lombok.SneakyThrows;
 
 public class ResourceReader {
     @SneakyThrows
     public static String readAsString(String resourceName) {
         try (InputStream inputStream = ResourceReader.class.getResourceAsStream(String.format("/%s",resourceName))) {
-            return IOUtils.toString(inputStream, UTF_8);
+            return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
         }
     }
 }
